# UniversalAnalogInput

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  THIRD_PARTY_LICENSES.md
.cargo/: config.toml
installer/: README.md  TERMS_OF_SERVICE.txt  setup.iss
native/: Cargo.toml  build.rs
native/src/: conversions.rs  curves.rs  lib.rs  logging.rs  ui_notifier.rs
native/src/api/: logging.rs  mappings.rs  mod.rs  profiles.rs  system.rs  types.rs
native/src/gamepad/: atomic_state.rs  mod.rs  vigem_client.rs
native/src/input/: event_manager.rs  hotkey_manager.rs  mod.rs
native/src/ipc/: mod.rs  protocol.rs  server.rs
native/src/mapping/: engine.rs  mod.rs
native/src/profile/: manager.rs  mod.rs  profiles.rs  sync.rs
native/src/wooting/: analog_sdk.rs  mod.rs
scripts/: build-installer.ps1  build.bat  build.ps1  build.sh  create-release.ps1  package.ps1  prepare-installer.ps1  setup-dev.bat
shared/assets/: README.md
shared/configs/: default_profile.json
ui/: UniversalAnalogInputUI.sln
ui/UniversalAnalogInputUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RemoveLanguageFolders.targets  UniversalAnalogInputUI.csproj  app.manifest
ui/UniversalAnalogInputUI/Controls/: CopyButton.xaml  DeadZoneRangeSlider.xaml  DeadZoneRangeSlider.xaml.cs  DecimalNumberFormatter.cs  MappingsListControl.xaml  MappingsListControl.xaml.cs  OpacityMaskView.xaml  ProfileManagementBarControl.xaml  ProfileManagementBarControl.xaml.cs  TabNavigationControl.xaml  TabNavigationControl.xaml.cs  ToastControl.xaml  (+3 more)
(+54 files in other folders)
