[package]
name = "universal-analog-input"
version = "1.0.0"
edition = "2021"

[lib]
name = "universal_analog_input"
crate-type = ["rlib"]

[[bin]]
name = "uai-tray"
path = "src/bin/tray.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
dirs = "6.0.0"
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk" }
vigem-client = "0.1"
winapi = { version = "0.3", features = ["winuser"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
once_cell = "1.18"
arc-swap = "1.7"
chrono = "0.4"
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"

[dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse"
]

[build-dependencies]
winres = "0.1"
